# CPSC221

./: README.md
PA1/pa1.0/: grill.cpp  kebab.cpp  main.cpp
PA1/pa1.1/: grill.cpp  grill.h  kebab.cpp  kebab.h  linkedlist.cpp
PA1/pa1.2/: grill.cpp  kebab.cpp  linkedlist.cpp  linkedlist.h
PA1/pa1.v4/: Makefile  grill.cpp  kebab.cpp  partners.txt
hw3code/: CMakeLists.txt  Makefile  lucky  lucky.cpp  lucky.h
hw3code/lucky.dSYM/Contents/: Info.plist
lab_avl1/: avltree.cpp  avltree.h  main.cpp
lab_debug/: .cproject  .project  sketchify  sketchify.cpp
lab_debug/cs221util/: HSLAPixel.cpp  HSLAPixel.h
lab_dict/: anagram_dict.cpp  common_words.cpp  fib.cpp  pronounce_dict.cpp
lab_hash/: anagram_finder.cpp  anagramtest  charcount  lphashtable.cpp  schashtable.cpp  word_counter.cpp  wordcount
lab_heaps/: CMakeLists.txt  heap.cpp  testheap
lab_intro/: HSLAPixel.h  lab_intro.cpp
lab_intro/cs221util/: HSLAPixel.cpp  HSLAPixel.h
lab_linkedlists/part1/: pointers
lab_linkedlists/part2/: linked_list.cpp  lists  lists.cpp
lab_linkedlists/part3/: deque
lab_quacks/: exercises.cpp  quackfun.cpp
lab_trees/: binarytree.cpp  binarytree.h
pa1.v4 2/: grill.cpp  kebab.cpp  linkedlist.cpp  main.cpp
pa2/: CMakeLists.txt  interpreter.cpp  partners.txt  queue.cpp  stack.h
pa2.1/: arrayclass.cpp  arrayclassprivate.h  interpreter.cpp  queue.cpp  stack.cpp
pa2.1/pa2(temp)/: arrayclass.cpp  interpreterprivate.h  queue.cpp  stack.cpp
pa2.1/pa2v2 2/: containertests.cpp  interpreter.h
pa2v2/: arrayclass.cpp
pa3/: partners.txt  quadtree.h
pa3_given/: CMakeLists.txt  png.cpp  quadtree.cpp
pa3_given 2/: CMakeLists.txt  partners.txt  png.h  quadtree.cpp
(+13 files in other folders)
